# Adeeny

./: .gitignore  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  render.yaml
Docker/: Dockerfile
apps/donation_mamagement/: apps.py
apps/donation_management/: admin.py  models.py  serializers.py  urls.py  views.py
apps/donation_management/migrations/: 0001_initial.py  0002_delete_donation_projectdonation_amount_and_more.py
apps/mosque_mamagement/: apps.py  models.py  serializers.py  views.py
apps/mosque_management/: admin.py  models.py  serializers.py  urls.py  views.py
apps/mosque_management/migrations/: 0001_initial.py  0002_alter_mosque_certificate_alter_mosque_image.py  0002_alter_mosque_image.py  0002_alter_mosque_location_alter_mosque_imam_and_more.py  0002_alter_mosque_name.py  0003_alter_mosque_certificate_alter_mosque_image.py  0003_alter_mosque_certificate_alter_mosque_image_and_more.py  0003_announcement_delete_annoucement.py  0003_prayertime_remove_mosque_mosque_image_and_more.py
apps/transactions/: models.py  services.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py  0002_collections_external_transaction_id.py  0003_remove_collections_id_and_more.py
apps/users/: admin.py  custom_permissions.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_user_roles.py  (+4 more)
config/: settings.py  urls.py
docker/: Dockerfile  build  build.sh  entry  start.sh
transactions/: models.py  serializers.py  services.py  test.md  urls.py  views.py
utils/: exceptions.py  utils.py
(+2 files in other folders)
